# nerc-rates

./: README.md  outages.yaml  pyproject.toml  rates.yaml
.github/workflows/: pre-commit.yaml  publish-pypi.yaml  unit-test.yaml  validate-files.yaml  validate-outages.yaml  validate-rates.yaml
src/nerc_rates/: __init__.py  models_outages.py  outages.py  outages_loader.py  rates.py  rates_loader.py
src/nerc_rates/base/: __init__.py  loader.py  models.py
src/nerc_rates/cmd/: validate_file.py  validate_files.py
src/nerc_rates/models/: __init__.py  outages.py  outages_model.py  rates.py  rates_model.py
src/nerc_rates/outages/: __init__.py  loader.py  models.py
src/nerc_rates/rates/: __init__.py  loader.py  models.py
src/nerc_rates/tests/: README.md  test-outages.yaml  test_outages.py  test_outages.yaml  test_rates.py
