[project]
name = "nerc_rates"
authors = [
  {name="MOC Alliance"},
]
dynamic = ["version"]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3"
]
requires-python = ">=3.11"
dependencies = [
  "pydantic",
  "pyyaml",
  "requests",
]

[project.entry-points."console_scripts"]
validate-rates-file = "nerc_rates.cmd.validate_rates_file:main"


[build-system]
requires = [
  "setuptools>=80",
  "wheel",
  "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-dir]
"" = "src"
